--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
   <title>Driving Game</title>
 </head>
 <body>
-
+  <div class="container flex center-both">
+    <div class="car-container">
+      <img src="images/f1.svg" alt="formula 1 car">
+    </div>
+  </div>
   <script src="main.js"></script>
 </body>
 </html>
