Add entry blimp

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container flex center-both">
     <div class="car-container">
-      <img src="images/f1.svg" alt="formula 1 car">
+      <img src="images/car.png" alt="formula 1 car">
     </div>
   </div>
   <script src="main.js"></script>
